Fixes an issue when right top menu is shifted when navigating between pages with scroll and pages with no scroll

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -2,6 +2,10 @@
 
 // TODO add css reset
 
+html {
+  overflow-y: overlay;
+}
+
 html,body {
   height: 100%;
   margin: 0;
